--- a/views/layout.slim
+++ b/views/layout.slim
@@ -5,6 +5,10 @@ html
     script src="/js/jquery-1.8.3.min.js"
     link rel="stylesheet" href="/css/bootstrap.min.css"
     link rel="stylesheet" href="/css/my.css"
+    - if locals[:page_title]
+      title == page_title
+      meta name="description" content="#{meta_description}"
+      meta name="keywords" content="#{meta_keywords}"
   body         
     .container
       .row
@@ -16,14 +20,9 @@ html
         .span2
           ul.nav.nav-list.is-sidebar
             li.nav-header Категории
-            li
-              a href='/aksessuary' Аксессуары
-            li
-              a href='/bizhuteria' Бижутерия
-            li
-              a href='/obuv' Обувь
-            li
-              a href='/sumki' Сумки
+            - Category.all.each do |category|
+              li
+                a href="/#{category.slug}" == category.title
 
         .span8
           == yield  
