--- a/views/category.slim
+++ b/views/category.slim
@@ -1,2 +1,4 @@
-- category.brands.each do |brand|
-  a href="/#{brand.slug}" = brand.title
+ul.inline
+  - category.brands.each do |brand|
+    li
+      a href="/#{brand.slug}" = brand.title
